--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,1 +1,10 @@
 // 公共基础样式 例如body背景色
+body {
+    background-color: #f5f7f9;
+}
+.van-nav-bar {
+    background-color: #3296fa;
+    .van-nav-bar__title {
+        color:#fff;
+    }
+}
